nginx-double.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx1
spec:
  selector:
    matchLabels:
      run: my-nginx1
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx1
        app: web
    spec:
      containers:
      - name: my-nginx1
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx1
  labels:
    run: my-nginx1
    app: web
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-nginx1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx2
spec:
  selector:
    matchLabels:
      run: my-nginx2
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx2
        app: web
    spec:
      containers:
      - name: my-nginx2
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx2
  labels:
    run: my-nginx2
    app: web
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-nginx2
