deny-all.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata: 
  name: default-deny
spec:
  selector: projectcalico.org/namespace != "kube-system"
  types:
  - Egress
  - Ingress
